# Short-term-Crypto-Price-Predictor

./: .gitignore  README.md
docker-compose/: Makefile  technical-indicators-historical.yml  technical-indicators-live.yml
services/candles/: config.py  live.settings.env  pyproject.toml  run.py  settings.env
services/news/: Dockerfile  Makefile  config.py  cryptonic_credentials.env  news_data_source.py  news_downloader.py  pyproject.toml  run.py
services/news-signal/: Makefile  config.py  ollama.env  pyproject.toml  run.py  settings.env
services/news-signal/llms/: claude.py  config.py  ollama.py
services/technical-indicators/: Dockerfile  Makefile  README.md  candle.py  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/to-feature-store/: Dockerfile  Makefile  config.py  historical.settings.env  pyproject.toml  run.py  settings.env  sinks.py
services/trades/: Makefile  config.py  naive.Dockerfile  pyproject.toml  run.py  settings.env
services/trades/src/: kraken_api.py
services/trades/src/kraken_api/: mock.py  trade.py  websocket.py
