[project]
name = "news-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.12.9",
    "llama-index-llms-anthropic>=0.6.3",
    "llama-index-llms-ollama>=0.5.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.5.0",
]
